# Enhanced-Hybrid-HHL

./: EXPERIMENT_README.md  HHL_example.ipynb  README.md  braket_circuit_depth_experiment.py  braket_plot_k_comparison.py  braket_plot_results.py  braket_tabulate_k_comparison.py  experiment.ipynb  hhl_circuit_depth_experiment.json  hhl_circuit_depth_experiment_2.json  hhl_tlp.ipynb  main.py  parallel_experiment_results.json  pyproject.toml  test.py  tlp_solving_experiment.py
.ipynb_checkpoints/: HHL_example-checkpoint.ipynb
enhanced_hybrid_hhl/: HHL.py  __init__.py  braket_projection.py  get_result.py
enhanced_hybrid_hhl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
enhanced_hybrid_hhl/eigenvalue_preprocessing/: iterative_preprocessing.py  preprocessing.py
enhanced_hybrid_hhl/result_getters/: __init__.py  circuit_depth_getter.py  circuit_depth_st_getter.py  fidelity_getter.py  ionq_hhl_getter.py  preprocessing_backend_getter.py  preprocessing_result_getter.py  preprocessing_session_getter.py  preprocessing_transpiled_getter.py  result_getter.py  session_result_getter.py  simulator_result_getter.py  swap_test_getter.py  swaptest.py  swaptest_post_processing.py
examples/alpha_approximation/: alpha_approx_evaluator.py
experiments/aws_braket/: braket_experiment_complete_20251221_162725.json  braket_experiment_metadata_20251221_162725.json  braket_projection_N16_hhl_20251221_155551.json  (+159 more)
outputs_aws/: results(5).json  results(6).json  results(7).json  results(8).json
puzzle_generation/: puzzle.json  requirements.txt  tlp_lattice.py
test/: test_get_result.py
(+296 files in other folders)
