[project]
name = "enhanced-hybrid-hhl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [


    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "networkx==2.8.8",
    "numpy==1.26.4",

    "packaging==25.0",
    "pillow==11.3.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.43.1",
    "scipy==1.15.3",
    "six==1.17.0",

    "typing-extensions==4.15.0",
]
